--- a/index.html
+++ b/index.html
@@ -57,13 +57,31 @@
 	<hr />
 
 	<div id="gameName">
-		<p>Running Sprite</p>
+		<p>跳跃忍者/Ninja jump - Swing</p>
 	</div>
 	<div >
-		<img src="img/game1-0001.png">
+		<img src="img/game2-0001.png">
 	</div>
 	<div id="decr">
-		《奔跑吧球球》是一款考验眼力和反应的游戏，整个游戏的唯一目标就是不断地避开各种障碍，每跑到一定距离，场景风格和赛道形状都会随机切换。简单的玩法，怀旧的风格，刺激的体验，让您根本停不下来！
+		<div>
+		《跳跃忍者!》是一款画面和音效都非常棒的快节奏躲避游戏，玩家的目标是从不断出现的圆形迷宫中逃脱生存下来。游戏的操作非常简单，点击左右两侧屏幕，控制忍者向左或向右跳跃移动，快来体验这款画面精致，玩法简单又富有挑战性的游戏吧！
+		</div>
+
+		<div>
+		*************************<br>
+		操作方式：<br>
+		点击左右两侧屏幕就能移动忍者。<br>
+		左侧则忍者朝左侧移动，同理右侧<br>
+		*************************
+		</div>
+
+		<div>
+		记得分享你的得分，让朋友们来挑战你！！！
+		</div>
+		
+		<div>
+		祝你游戏愉快 ：）
+		</div>
 	</div>
 </bdoy>
 </html>	
