--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		《奔跑吧球球》是一款考验眼力和反应的游戏，整个游戏的唯一目标就是不断地避开各种障碍，每跑到一定距离，场景风格和赛道形状都会随机切换。简单的玩法，怀旧的风格，刺激的体验，让您根本停不下来！
 	</div>
 	<div>
-		<a href="http://www.baidu.com/" class="button button-3d button-primary button-rounded">play now</a>
+		<a href="https://itunes.apple.com/us/app/running-sprite-super-avoid/id1064398805?l=zh&ls=1&mt=8" class="button button-3d button-primary button-rounded">play now</a>
 	</div>
 
 	<!-- <hr style="height:1px;border:none;border-top:1px dashed #0066CC;size:10px;" /> -->
@@ -82,6 +82,9 @@
 		<div>
 		祝你游戏愉快 ：）
 		</div>
+	</div>
+	<div>
+		<a href="https://itunes.apple.com/us/app/tiao-yue-ren-zhe!/id1070993068?l=zh&ls=1&mt=8" class="button button-3d button-primary button-rounded">play now</a>
 	</div>
 </bdoy>
 </html>	
